<resources>
    <string name="app_name">Mini Explorer</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="password_go_here">Your password </string>
    <string name="password_confirm"> Confirm your password</string>
    <string name="Create_new_user">Create a new account</string>
    <string name="Email">Email</string>
    <string name="Email_here"> Your email</string>
    <string name="registration_complete"> Registration complete</string>
    <string name="login_complete">Login</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="menu_reading">Environment readings</string>
    <string name="menu_explorer_status">Explorer Status</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_live_support">Live support</string>
    <string name="menu_return">Return to main menu</string>
    <string name="humidity">Humidity: </string>
    <string name="humidity_number"> </string>
    <string name="temperature">Temperature: </string>
    <string name="temperature_number"> </string>
    <string name="on_off">Power State</string>
    <string name="low_battery_alert">Low battery alert</string>
    <string name="scan_intervals">Scan Intervals</string>
    <string name="auto_shutdown"> Auto Shutdown</string>
    <string name="apply"> Apply </string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="logout">Log out</string>
    <string name="todo">TODO</string>
    <string name="quit">Quit</string>
    <string name="Goback">Return</string>
    <string name="Developers">Developers</string>
    <string name="Duc">Duc Nguyen</string>
    <string name="Jordan">Jordan Pulido</string>
    <string name="your_message_is">Your Message is:</string>
    <string name="secret_mesage_displayed_here">Secret Mesage Displayed Here</string>
    <string name="secret_message">Secret Message</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="translation">Translation</string>
    <string name="Automatic"> Automatic </string>
</resources>
