<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ducnguyen.miniexplorer.SettingScreen"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:onClick="gotoMainMenu"
        android:text="@string/menu_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/menu_settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="23dp"
        android:text="@string/low_battery_alert"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:layout_marginStart="32dp"
        android:text="@string/scan_intervals"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="24dp"
        android:text="@string/auto_shutdown"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnglish"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/translation"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEnglish"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextScanIntervals"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/editTextLowBattery" />

    <EditText
        android:id="@+id/editTextLowBattery"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <EditText
        android:id="@+id/editTextAutoShutdown"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/buttonFrench"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonEnglish"
        app:layout_constraintTop_toBottomOf="@+id/editTextScanIntervals" />


    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/apply"
        app:layout_constraintStart_toStartOf="@+id/buttonEnglish"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnglish" />

    <Button
        android:id="@+id/buttonEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="19dp"
        android:text="@string/english"
        app:layout_constraintEnd_toStartOf="@+id/buttonFrench"
        app:layout_constraintTop_toBottomOf="@+id/editTextAutoShutdown" />

    <Button
        android:id="@+id/buttonFrench"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/french"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEnglish"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
